src/components/inputs/money-input/money-input.mod.css
@import '../../../../materials/tokens/tokens.mod.css';
@import '../../../../materials/borders.mod.css';
@import '../../../../materials/colors/base-colors.mod.css';
@import '../../../../materials/sizes.mod.css';
@import '../../../../materials/spacings.mod.css';
@import '../../../../materials/transitions.mod.css';

:root {
  --width-currency-label: 60px;
}

.field-container {
  width: 100%;
  position: relative;
  display: flex;
}

.input {
  display: flex;
  flex: 1;
  color: var(--token-font-color-default);
  font-family: var(--token-font-family-default);
  font-size: var(--token-font-size-default);
  height: var(--token-size-height-input);
  border-top-right-radius: var(--token-border-radius-input);
  border-bottom-right-radius: var(--token-border-radius-input);
  border: 1px var(--token-border-color-input-pristine) solid;
  padding: 0 var(--spacing-8);
  transition: var(--transition-standard);
  outline: none;
  box-shadow: none;
  appearance: none;
}

.input::placeholder {
  color: var(--token-font-color-placeholder);
}

/* States for amount */

.amount-default {
  composes: input;
  border-color: var(--token-border-color-input-pristine);
  background-color: var(--token-background-color-input-pristine);
}

.amount-disabled {
  composes: input;
  cursor: not-allowed;
  color: var(--token-font-color-disabled);
  border-color: var(--token-border-color-input-disabled);
  background-color: var(--token-background-color-input-disabled);
  opacity: 1; /* fix for mobile safari */
}

.amount-warning {
  composes: input;
  color: var(--token-font-color-warning);
  border-color: var(--token-border-color-input-warning);
}

.amount-error {
  composes: input;
  color: var(--token-font-color-error);
  border-color: var(--token-border-color-input-error);
}

.amount-default:active,
.amount-default:focus {
  border-color: var(--token-border-color-input-focus);
  background: var(--token-background-color-input-pristine);
  color: var(--token-font-color-default);
}

/* Currency dropdown */
.currency-default {
  display: flex;
  width: var(--width-currency-label);
  flex-direction: column;
  border-top-left-radius: var(--token-border-radius-input);
  border-bottom-left-radius: var(--token-border-radius-input);
  height: var(--token-size-height-input);
  border: 1px var(--token-border-color-input-pristine) solid;
  background-color: var(--token-background-color-input-pristine);
  border-right: 0;
  position: relative;
}

.currency-active {
  composes: currency-default;
  border-color: var(--token-border-color-input-focus);
}

.currency-disabled {
  composes: currency-default;
  color: var(--token-font-color-disabled);
  border-color: var(--token-border-color-input-disabled);
  background-color: var(--token-background-color-input-disabled);
}

.currency-warning {
  composes: currency-default;
  color: var(--token-font-color-warning);
  border-color: var(--token-border-color-input-warning);
}

.currency-error {
  composes: currency-default;
  color: var(--token-font-color-error);
  border-color: var(--token-border-color-input-error);
}

.currency-wrapper {
  display: flex;
  flex: 1 0 100%;
  align-items: center;
  padding: var(--spacing-4) var(--spacing-8);
}

.languagesDropdown {
  display: flex;
  flex: 1 0 100%;
  padding: var(--spacing-4) var(--spacing-8);
}

.languagesDropdown > * {
  flex: 1;
}

.chevron {
  display: flex;
  align-items: center;
}

/* Currency Label (not dropdown) */

.currency-label {
  composes: currency-default;
  border-color: var(--token-border-color-input-disabled);
  color: var(--token-font-color-disabled);
  background-color: var(--token-background-color-input-disabled);
  padding: 0 var(--spacing-8);
}

.options-wrapper {
  border-radius: var(--token-border-radius-input);
  color: var(--token-font-color-default);
  position: relative;
  z-index: 5;
  top: var(--spacing-4);

  /* to center the options under the header */
  left: -1px;
}

.options-wrapper-active {
  composes: options-wrapper;
  border: 1px solid var(--token-border-color-input-focus);
}

.options-wrapper-error {
  composes: options-wrapper;
  border: 1px solid var(--token-border-color-input-error);
}

.options-wrapper-warning {
  composes: options-wrapper;
  border: 1px solid var(--token-border-color-input-warning);
}

.option-wrapper {
  display: block;
  text-align: left;
  width: 100%;
  padding: var(--spacing-8);
  background-color: var(--token-background-color-input-pristine);
}

.option-wrapper:first-child {
  border-radius: var(--token-border-radius-input)
    var(--token-border-radius-input) 0 0;
}

.option-wrapper:last-child {
  border-radius: 0 0 var(--token-border-radius-input)
    var(--token-border-radius-input);
}

.option-wrapper:hover {
  /* FIXME: apply token for dropdown option hover */
  background: var(--color-gray-90);
}

